src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Counselor_Banner_Number__c</fullName>
        <description>Banner number from STVRECR</description>
        <label>Counselor Banner Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Counselor_Website_Profile__c</fullName>
        <label>Counselor Website Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Default_Groove_Team__c</fullName>
        <inlineHelpText>Controls to which Groove team the user will be assigned to by default. If the value of this field matches a team that exists in Groove (case-sensitive), Groove will automatically assign the user to that team in Groove. This happens every 24 hours.</inlineHelpText>
        <label>Default Groove Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Email_Alias_1__c</fullName>
        <inlineHelpText>allows you to specify an alternative email address of the user. Besides the primary email address alias will also be used in order to identify who the owner, organizer or invitees are of tasks/events created by Groove.</inlineHelpText>
        <label>Email Alias 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Email_Alias_2__c</fullName>
        <inlineHelpText>allows you to specify an alternative email address of the user. Besides the primary email address alias will also be used in order to identify who the owner, organizer or invitees are of tasks/events created by Groove.</inlineHelpText>
        <label>Email Alias 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Google_Plus_ID__c</fullName>
        <inlineHelpText>is the G+ ID of the user. This is populated via the Groove Auth Provider Handler at the first time a user logs in via this Auth Provider.</inlineHelpText>
        <label>G+ ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Is_Unresolved_Items_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Controls whether or not this user can be authorized by other users to managed their unresolved items.

WARNING: enabling this option for a user might expose the content of other users&apos; emails to this user.</inlineHelpText>
        <label>Is Unresolved Items Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__My_Unresolved_Items_Agent__c</fullName>
        <inlineHelpText>Controls who you authorize too handle your Groove Unresolved Items (i.e. deleting or assigning synced emails to related records).

WARNING: This will expose some of your emails to the Unresolved Items Agent.</inlineHelpText>
        <label>My Unresolved Items Agent</label>
        <relationshipName>Unresolved_Items_Clients</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Profile_Id__c</fullName>
        <formula>ProfileId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Mirrors the profile ID of the user. This field is in use by Groove Flow</inlineHelpText>
        <label>Profile Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Since_Login__c</fullName>
        <description>Finds the number of days since Last Login.</description>
        <formula>TODAY() - Last_Login_Custom__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Login</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName +&quot; &quot;+ LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Reason__c</fullName>
        <description>Give reason account is no longer active</description>
        <label>Inactive Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Login_Custom__c</fullName>
        <description>Workflow &quot;User: Last Login Update&quot; populates this with the current date every time someone logs in. The standard Last Login field can&apos;t be used in formulas, so this custom field lets us calculate the &quot;Days Since Login&quot; field.</description>
        <label>Last Login (Custom)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_User_ID__c</fullName>
        <description>The previous User Id if it existed</description>
        <externalId>true</externalId>
        <label>Previous User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used for migration to this org</description>
        <label>Reactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X18_digit_User_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 digit User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Campaign_Monitor_User__c</fullName>
        <description>Used with the Campaign Monitor connector. Enter the users Campaign Monitor email address.</description>
        <inlineHelpText>Used with the Campaign Monitor connector. Enter the users Campaign Monitor email address.</inlineHelpText>
        <label>Campaign Monitor User</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>Active_Internal_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>community</value>
        </filters>
        <label>Active Internal Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Applicant_Community_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>startsWith</operation>
            <value>Applicant Community</value>
        </filters>
        <label>Applicant Community Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CAS_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>equals</operation>
            <value>CAS Admissions</value>
        </filters>
        <label>CAS Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ITS</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>equals</operation>
            <value>ITS</value>
        </filters>
        <label>ITS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Internal_Users_Active</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>X18_digit_User_ID__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Applicant Community Login User</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Internal Users (Active)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Recently_Created</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>X18_digit_User_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Applicant Community Login User</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Recently Created</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Department_Blank</fullName>
        <active>false</active>
        <description>Department can&apos;t be blank.</description>
        <errorConditionFormula>Department = null  &amp;&amp;  UserRoleId  &lt;&gt; null</errorConditionFormula>
        <errorMessage>Department cannot be left blank.</errorMessage>
    </validationRules>
</CustomObject>